--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,7 +6,144 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: free.domain.photos
+    port: 80
+    cipher: auto
+    uuid: 44ed6043-a70e-44ce-c1f9-649f69efce7c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /free
+      headers:
+        host: free.domain.photos
+  - &id002
+    name: 🇹🇷_TR_土耳其
+    type: vmess
+    server: 193.46.56.210
+    port: 8443
+    cipher: auto
+    uuid: 56354ec0-cadc-49e1-8144-8a1b20571b4f
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10848
+    udp: true
+    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇮🇳_IN_印度
+    type: vmess
+    server: 103.113.68.57
+    port: 8443
+    cipher: auto
+    uuid: 01fd0618-8ac2-48e4-b008-3b2bc2653b60
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: cm1.awslcn.info
+    port: 25230
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cm1.awslcn.info
+  - &id007
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: trojan
+    server: us01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: us01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 94.131.10.135
+    port: 8080
+    cipher: auto
+    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: internet.life.com.by
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10850
+    udp: true
+    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
+    type: vmess
+    server: cu.awslcn.info
+    port: 25284
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cu.awslcn.info
+  - &id011
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id012
+    name: 🇩🇪_DE_德国
     type: vmess
     server: arshatheroad8pippahotelsinestra.irandarkpro.gq
     port: 2082
@@ -16,18 +153,122 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id002
-    name: 🇩🇪_DE_德国_2
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: trojan
-    server: 5.104.108.120
-    port: 443
+    server: other.kunlun-ppg.com
+    port: 10838
     udp: true
-    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
-    sni: 20-24-33-134.nhost.00cdn.com
+    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id003
-    name: 🇺🇸_US_美国_1
+  - &id014
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 193.203.203.88
+    port: 8443
+    cipher: auto
+    uuid: 012a4853-55fe-4eef-b8c2-e87f8fd178e5
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: us1.awslcn.info
+    port: 25256
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us1.awslcn.info
+  - &id016
+    name: 🇭🇰_HK_香港->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: ru01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: ru01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40007
+    udp: true
+    password: 9737c85e-ad5c-48f5-93f6-9bdb0361d04c
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: us2.awslcn.info
+    port: 25257
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us2.awslcn.info
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: us1.awslcn.info
+    port: 25239
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us1.awslcn.info
+  - &id020
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: us3.36routes.online
+    port: 80
+    cipher: auto
+    uuid: 8efc7e9d-716e-440c-8573-5c52e8c503e3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.36routes.online
+  - &id021
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
+    port: 8443
+    udp: true
+    password: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
+    sni: ams-trojan-grpc.carfin.tech
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '@apt_mahdi'
+  - &id022
+    name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
     type: vmess
     server: 162.159.192.244
     port: 443
@@ -41,102 +282,31 @@ proxies:
       path: /673ba378-840f-4928-81f2-203148d07350
       headers:
         host: cowochtmtrkers.turbo021.link
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: us1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
-    sni: 206.237.5.220
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: sg1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
-    sni: 206.237.5.220
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 89.116.180.158
-    port: 443
-    udp: true
-    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
-    sni: 3us2.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us2
-      headers:
-        host: 3us2.pqjc.buzz
-  - &id007
+  - &id023
     name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 89.116.180.179
+    type: vmess
+    server: afrhms16v.bestxray.buzz
     port: 443
-    udp: true
-    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
-    sni: p6us4.pqjc.buzz
+    cipher: auto
+    uuid: f584de15-2034-4170-a723-f48c2bae5e0f
+    alterId: 0
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /pq/us4
+      path: /linkws
       headers:
-        host: p6us4.pqjc.buzz
-  - &id008
-    name: 🇺🇸_US_美国_6
+        host: afrhms16v.bestxray.buzz
+  - &id024
+    name: 🇳🇿_NZ_新西兰
     type: trojan
-    server: jp1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    server: 216.73.156.230
     port: 443
     udp: true
-    password: ff981c01-9f9a-4b27-bb09-0d98b7a4b7fa
-    sni: 13-231-155-134.nhost.00cdn.com
+    password: 11e247e5-136d-45f1-844a-a7f054d36bab
+    sni: 216.73.156.230
     skip-cert-verify: true
     network: tcp
-  - &id009
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: 5.104.108.109
-    port: 443
-    udp: true
-    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
-    sni: 20-24-33-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: 81cd0143-601c-44dc-b479-6f28b3b71c64
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-      headers:
-        host: 6us3.pqjc.buzz
-  - &id011
-    name: 🇺🇸_US_美国_8
-    type: trojan
-    server: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
-    port: 8443
-    udp: true
-    password: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
-    sni: ams-trojan-grpc.carfin.tech
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '@apt_mahdi'
 proxy-groups:
   - name: PROXY
     type: select
@@ -174,6 +344,19 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -190,6 +373,19 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
   - name: SELECT
     type: select
     proxies:
@@ -204,6 +400,19 @@ proxy-groups:
       - *id009
       - *id010
       - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
