--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,20 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
-    port: 8443
-    udp: true
-    password: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
-    sni: ams-trojan-grpc.carfin.tech
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '@apt_mahdi'
-  - &id002
     name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
     type: vmess
     server: 162.159.192.244
@@ -35,210 +21,69 @@ proxies:
       path: /673ba378-840f-4928-81f2-203148d07350
       headers:
         host: cowochtmtrkers.turbo021.link
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: 104.21.30.195
-    port: 2096
-    cipher: auto
-    uuid: c7ccf81e-2f35-4170-aeb8-f84fb2ec2b29
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: SkamAmmLLLmawm.mookomeIlz.Homes
-    network: ws
-    ws-opts:
-      path: /@FreeVPNHomes@FreeVPNHomes
-      headers:
-        host: PAnEl128.MookomeIlz.Homes
-  - &id004
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: trojan
-    server: frontend.kuangbiaoyun.com
-    port: 40007
+    server: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
+    port: 8443
     udp: true
-    password: 9737c85e-ad5c-48f5-93f6-9bdb0361d04c
+    password: 
+      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
+    sni: ams-trojan-grpc.carfin.tech
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: '@apt_mahdi'
+  - &id003
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 5.104.107.143
+    port: 443
+    udp: true
+    password: 6befeeb3-702b-4948-9028-f9e072f2da98
     skip-cert-verify: true
     network: tcp
   - &id005
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: free.domain.photos
-    port: 80
-    cipher: auto
-    uuid: 44ed6043-a70e-44ce-c1f9-649f69efce7c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /free
-      headers:
-        host: free.domain.photos
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: Telegram-Channel.hkaa0_MT.66688888.xyz
-    port: 2092
-    cipher: auto
-    uuid: 9504f6d1-160e-495e-e32d-7c0b8b1f704b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /telegram:@hkaa0
-      headers:
-        host: Telegram-Channel.hkaa0_MT.66688888.xyz
-  - &id007
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 35.90.10.174
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: vmess
-    server: 154.194.2.177
-    port: 80
-    cipher: auto
-    uuid: de2b04f9-0374-4a93-8295-a9c4352efa94
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /de2b04f9
-      headers:
-        host: v.nagisa.cyou
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10848
-    udp: true
-    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id012
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id013
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7703
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: 511df45641.microsoft.com
+    protocol-param: 45641:1119_jE165t
+    group: Update-二爷
+  - &id006
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: b6825e95-39b1-4e99-98c2-7b344f0f698a
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 52.33.95.19
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id015
-    name: 🇺🇸_US_美国_6
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7706
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: 511df45641.microsoft.com
+    protocol-param: 45641:1119_jE165t
+    group: Update-二爷
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: 94.131.10.135
-    port: 8080
+    server: 104.21.33.130
+    port: 2052
     cipher: auto
-    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: internet.life.com.by
-  - &id016
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
-  - &id017
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 193.203.203.88
-    port: 8443
-    cipher: auto
-    uuid: 012a4853-55fe-4eef-b8c2-e87f8fd178e5
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇦_UA_乌克兰
-    type: vmess
-    server: 193.238.153.14
-    port: 8443
-    cipher: auto
-    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇹🇷_TR_土耳其
-    type: vmess
-    server: 193.46.56.210
-    port: 8443
-    cipher: auto
-    uuid: 56354ec0-cadc-49e1-8144-8a1b20571b4f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇮🇳_IN_印度
-    type: vmess
-    server: 103.113.68.57
-    port: 8443
-    cipher: auto
-    uuid: 01fd0618-8ac2-48e4-b008-3b2bc2653b60
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -246,24 +91,23 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id023
-    name: 🇺🇸_US_美国_9
+        host: family.mgtajhiz.ir
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 52.33.95.19
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 94.131.115.129
+    port: 38108
+    password: bNUe0jR9rzsvLEzfPmI4Of
+    cipher: chacha20-ietf-poly1305
+  - &id010
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: ns1.v2-vip.fun
     port: 80
@@ -277,6 +121,183 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v004.ssrsub.com
+  - &id011
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id014
+    name: 🇳🇱_NL_荷兰
+    type: ss
+    server: 45.87.154.143
+    port: 1165
+    password: 0cAOTNuOqZQuK1c9-mCXJQ
+    cipher: chacha20-ietf-poly1305
+  - &id015
+    name: 🇺🇦_UA_乌克兰
+    type: vmess
+    server: 193.238.153.14
+    port: 8443
+    cipher: auto
+    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: ss
+    server: 91.194.161.7
+    port: 8388
+    password: OWJlYjYy
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: cm1.awslcn.info
+    port: 25230
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cm1.awslcn.info
+  - &id018
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: us01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: us01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
+    type: vmess
+    server: cu.awslcn.info
+    port: 25284
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cu.awslcn.info
+  - &id020
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id021
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: ru01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: ru01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: us2.awslcn.info
+    port: 25257
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us2.awslcn.info
+  - &id023
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: us1.awslcn.info
+    port: 25239
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us1.awslcn.info
+  - &id024
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: singapore.com
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id025
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -326,6 +347,8 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -354,6 +377,8 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -380,6 +405,8 @@ proxy-groups:
       - *id021
       - *id022
       - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
